<resources>
    <string name="app_name" translatable="false">Analizapp</string>
    <string name="passwordHint">Password</string>
    <string name="mailHint">Username or Mail</string>
    <string name="Login">LOG IN</string>
    <string name="SignIn">CREATE YOUR ACCOUNT</string>
    <string name="Name">Name</string>
    <string name="LastName">Last Name</string>
    <string name="Mail">Email</string>
    <string name="Terms">By creating an account you agree to our terms and conditions</string>
    <string name="AlreadyHaveAccount">Already have an account? Login</string>
    <string name="NotAccount">You don´t hava account? signup</string>
    <string name="ImageProfileDescription">Avatar Picrure</string>
    <string name="imageBgDescription">Background Picture</string>
    <string name="ResoursesNotFound">There is no images</string>
    <string name="photoUpload">photos uploaded</string>
    <string name="greeting">Welcome</string>
    <string name="choose">Please choose...</string>
    <string name="Description">Description</string>
    <string name="CreateMetal">Create metal</string>
    <string name="NewMetal">New metal</string>


    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Cancel">Cancel</string>

    <!-- Menu strings -->
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Analytics" translatable="false">Analytics</string>
    <string name="Metals">Metals</string>
    <string name="Settings">Settings</string>
    <string name="AboutUs">About Us</string>
    <string name="Logout">Log out</string>

    <!-- Alert dialog -->
    <string name="AlertTitleImportant">Important</string>
    <string name="AlertLogoutMessage">Are you sure you want to log out?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TakePicture">Take picture</string>
    <string name="UploadPicture">Upload Picture</string>

    <!-- Settings -->
    <string name="Vesion">Vesion</string>
    <string name="Experiment">Experiment</string>
    <string name="Experiments">Experiments</string>
    <string name="Metal" translatable="false">Metal</string>
    <string name="Degrees">Degrees</string>
    <string name="SAVE">SAVE</string>
    <string name="AddImage">Add image</string>
    <string name="MetalName">Metal Name</string>
    <string name="MetalDescription">Metal Description</string>

    <!-- Loading screens -->
    <string name="Authenticating">Authenticating...</string>
    <string name="ExperimentName">Experiment Name</string>
    <string name="ExperimentDescription">Experiment Description</string>
    <string name="ExperimentUserid">Experiment user id</string>
    <string name="Date">Date</string>
    <string name="CreateExperiment">Create Experiment</string>
    <string name="Comments">Comments</string>
    <string name="ImageAnalysis">Image analysis</string>
    <string name="TimeMinutes">Time Minutes</string>


</resources>
