<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_experiment"
    android:orientation="vertical"
    tools:context=".fragments.ExperimentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/globalPadding">

                <Button
                    android:id="@+id/add_image_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AddImage" />

                <TextView
                    android:id="@+id/textv_experiment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/Experiment" />

                <Spinner
                    android:id="@+id/dropdown_experiment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:background="@android:drawable/btn_dropdown"/>

                <TextView
                    android:id="@+id/textv_metal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/Metal" />

                <Spinner
                    android:id="@+id/dropdown_metal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:background="@android:drawable/btn_dropdown"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Degrees"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etext_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:lines="5"
                    android:hint="@string/Description"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true"
                    android:singleLine="false" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/globalPadding"
        android:orientation="vertical">

        <Button
            android:id="@+id/save_btn"
            style="@style/final_btn_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/SAVE" />
    </LinearLayout>

</LinearLayout>