<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/principal_chooceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/principal_linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/choose" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/principal_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/ImageProfileDescription"
            android:cropToPadding="false"
            android:elevation="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar1"/>
            <!--app:civ_border_color="#FFF"
            app:civ_border_width="4dp" -->

        <LinearLayout
            android:id="@+id/principal_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/principal_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/principal_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/greeting"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/principal_greeting_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>