<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/image_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/imageBgDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/bg1" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/ImageProfileDescription"
                android:cropToPadding="false"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar1"
                app:civ_border_color="#FFF"
                app:civ_border_width="4dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <ProgressBar
                    android:id="@+id/user_profile_loading"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:visibility="gone"></ProgressBar>

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_profile_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:textColor="#000" />

                <LinearLayout
                    android:id="@+id/user_profile_linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_mail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_profile_linearLayout_images"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="3dp"
                        android:text="0"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_profile_linearLayout_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/photoUpload"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/images"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
